[package]
name = "wordle-ncurses"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed="6.4.0"
structopt = { version = "0.3", default-features = false }
ncurses = { version = "5.101.0", features = ["panel"] }
rand = "0.7.3"
